bk_ida/gccida/c1/noce_process_if_block
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2108:4: error: expected ';' after expression
rtx v19; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2108:5: error: use of undeclared identifier 'v19'
rtx v19; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2111:4: error: expected ';' after expression
rtx cond_earliest; // rbx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2111:5: error: use of undeclared identifier 'cond_earliest'
rtx cond_earliest; // rbx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2121:4: error: expected ';' after expression
rtx to; // [rsp+0h] [rbp-B8h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2121:5: error: use of undeclared identifier 'to'
rtx to; // [rsp+0h] [rbp-B8h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2125:4: error: expected ';' after expression
rtx v37; // [rsp+20h] [rbp-98h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2125:5: error: use of undeclared identifier 'v37'
rtx v37; // [rsp+20h] [rbp-98h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2145:1: error: use of undeclared identifier 'v37'
v37 = active_insn; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2149:27: error: use of undeclared identifier 'v37'
if ( rtx_class[*( _WORD *)v37] == 105 ) 
                          ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2151:13: error: expected ';' after expression
v11 = ( rtx)v37[2]; 
            ^
            ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2151:13: error: use of undeclared identifier 'v37'
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2154:34: error: expected expression
v11 = single_set_2( v37, *( rtx *)&v37[2]); 
                                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2154:36: error: use of undeclared identifier 'v37'
v11 = single_set_2( v37, *( rtx *)&v37[2]); 
                                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2154:21: error: use of undeclared identifier 'v37'
v11 = single_set_2( v37, *( rtx *)&v37[2]); 
                    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2163:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
v14 = (  struct rtx_def *)v11[1]; 
                          ^~~~~~
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2175:1: error: use of undeclared identifier 'to'
to = v18; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2178:1: error: use of undeclared identifier 'v19'
v19 = ( rtx)v18[2]; 
^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/ifcvt.c:2179:17: error: use of undeclared identifier 'v19'
if ( *( _WORD *)v19 != 47 ) 
                ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/noce_process_if_block/src/obj/ifcvt.o] Error 1
